2010-12-14 Tue  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (clean): New.

	* epackage.el
	(top level): Document *-compile.el in "Epackage specification.
	Add `lm-version' autoload.
	(epackage-cmd-display-package-info): New.
	(epackage--buffer-doc): Rename. Was `epackage--doc-buffer'.
	(epackage--buffer-info): New.
	(epackage-with-buffer-info): New.
	(epackage-pkg-info-display): New.
	(epackage--pkg-info-file-name): New.
	(epackage-directory-package-control): Rename. Was
	`epackage-file-name-vcs-package-control-directory'.
	(epackage-file-name-package-info): New.
	(epackage-package-info-p): New.
	(epackage-file-content-as-string): New.
	(epackage-pkg-info-display): New.
	(epackage-with-package-info-file): New.
	(epackage--batch-ui-menu-actions): Rename i, I commands to e, E.
	Add command i to display package info.
	(epackage--batch-ui-menu-help): Update.
	(epackage-batch-ui-display-package-info): New.
	(epackage--install-autoload-hook): New.
	(epackage--install-enable-hook): New.
	(epackage--install-disable-hook): New.
	(epackage--install-activate-hook): New.
	(epackage--install-deactivate-hook): New.
	(epackage-config-install-autoload): Add hook.
	(epackage--install-config-delete-hook): New.
	(epackage--install-config-delete-all-hook): New.
	(epackage-config-delete-all): Add hook.
	(epackage--install-type-hook): New.
	(epackage-config-install-action): Add hook.
	(epackage-cmd-enable-package): Add hook.
	(epackage-cmd-disable-package): Add hook.
	(epackage-cmd-activate-package): Add hook.
	(epackage-cmd-deactivate-package): Add hook.
	(epackage-cmd-clean-package): Add hook.
	(epackage--install-clean-hook): New.
	(epackage--install-download-hook): New.
	(epackage--install-remove-hook): New.
	(epackage-download-package): Add hook.
	(epackage--initialize-hook): New.
	(epackage-initialize): Run hook.
	(epackage--build-sources-list-hook): New.
	(epackage-build-sources-list): Add hook.
	(epackage--download-action-list): New.